--- a/index.html
+++ b/index.html
@@ -1,9 +1,61 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>11056 Website</title>
-</head>
+<header>
+  <img src="file:///C:/Users/musta/Downloads/Logo%20Evolution%20designs.png">
+
+  <h1>
+    Gordon Andrews
+  </h1>
+
+  <ul>
+    <li>
+      <a href="#">Biography ▼</a>
+      <ul class="dropdown">
+        <li><a href="#">Biography</a></li>
+        <li><a href="#">Influence</a></li>
+        <li><a href="#">Legacy</a></li>
+      </ul>
+    </li>
+
+    <li>
+      <a href="#">Key Works ▼</a>
+      <ul class="dropdown">
+        <li><a href="#">Catalogs</a></li>
+        <li><a href="#">Bank Notes</a></li>
+        <li><a href="#">Furniture</a></li>
+      </ul>
+    </li>
+
+    <li>
+      <a href="#">Copyright ▼</a>
+      <ul class="dropdown">
+        <li><a href="#">Playhouse</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </li>
+  </ul>
+</header>
+
 <body>
-    <h1>Hello, World!</h1>
+  <div class="conteudo">
+    <div class="carrousel">
+      <article class="card">
+        <img src="https://raw.githubusercontent.com/UC-Design/11056-source-content/refs/heads/main/gordon-andrews/images/andrews-powerhouse-3.jpeg">
+      </article>
+      <article class="card">
+        <img src="https://raw.githubusercontent.com/UC-Design/11056-source-content/refs/heads/main/gordon-andrews/images/andrews-cameron-offices-lift-AGI.jpg">
+      </article>
+      <article class="card">
+        <img src="https://raw.githubusercontent.com/UC-Design/11056-source-content/refs/heads/main/gordon-andrews/images/andrews-powerhouse-16.jpeg">
+      </article>
+    </div>
+  </div>
 </body>
+
+<footer>
+  <h2>
+    This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2025.
+  </h2>
+</footer>
+
 </html>
