90% completion of the Homepage

--- a/homepageweb.html
+++ b/homepageweb.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<header>
-  <img src="file:///C:/Users/musta/Downloads/Logo%20Evolution%20designs.png">
+<header class="logo-container">
+  <div class="logo">
+  </div>
 
   <h1>
     Gordon Andrews
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,800;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="homepageweb.css">
   </h1>
 
   <ul>
@@ -39,13 +42,13 @@
 <body>
   <div class="conteudo">
     <div class="carrousel">
-      <article class="card">
+      <article class="card1">
         <img src="https://raw.githubusercontent.com/UC-Design/11056-source-content/refs/heads/main/gordon-andrews/images/andrews-powerhouse-3.jpeg">
       </article>
-      <article class="card">
+      <article class="card2">
         <img src="https://raw.githubusercontent.com/UC-Design/11056-source-content/refs/heads/main/gordon-andrews/images/andrews-cameron-offices-lift-AGI.jpg">
       </article>
-      <article class="card">
+      <article class="card3">
         <img src="https://raw.githubusercontent.com/UC-Design/11056-source-content/refs/heads/main/gordon-andrews/images/andrews-powerhouse-16.jpeg">
       </article>
     </div>
