Homepage complete and 60% complete for the biography page

--- a/homepageweb.html
+++ b/homepageweb.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <header class="logo-container">
   <div class="logo">
   </div>
@@ -13,8 +13,11 @@
   <ul>
     <li>
       <a href="#">Biography ▼</a>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
       <ul class="dropdown">
-        <li><a href="#">Biography</a></li>
+        <li><a href="biography.html">Biography</a></li>
         <li><a href="#">Influence</a></li>
         <li><a href="#">Legacy</a></li>
       </ul>
@@ -23,6 +26,9 @@
     <li>
       <a href="#">Key Works ▼</a>
       <ul class="dropdown">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
         <li><a href="#">Catalogs</a></li>
         <li><a href="#">Bank Notes</a></li>
         <li><a href="#">Furniture</a></li>
@@ -32,6 +38,9 @@
     <li>
       <a href="#">Copyright ▼</a>
       <ul class="dropdown">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
         <li><a href="#">Playhouse</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -56,7 +65,7 @@
 </body>
 
 <footer>
-  <h2>
+  <h2 class="footer">
     This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2025.
   </h2>
 </footer>
