--- a/biography.html
+++ b/biography.html
@@ -65,16 +65,16 @@
   </p>
 
   <h2 class="quote">
-    "Gordon Andrews’ design career has been remarkably diverse, making difficult an overall assessment of his work. He is considered by his peers and critics to have worked successfully in virtually every medium he has chosen"
+    "Gordon Andrews design career has been remarkably diverse, making difficult an overall assessment of his work. He is considered by his peers and critics to have worked successfully in virtually every medium he has chosen"
   </h2>
 
-  <p class="columns1">
+  <p class="biographycolumns1">
     During 1953-1954, he and his family lived in Turin, Italy, while he designed an encyclopaedia, styled a fountain pen and produced an exhibition for the 1954 Fiera de Milano. Then he turned down a three-year contract with Olivetti to bring his family back to Sydney. On return, he designed exhibitions, shops, showrooms and furniture for Olivetti, David Jones the Commonwealth Bank, NSW Government agencies, and other notable clients.
   He is best known for designing the first decimal currency bank notes that were released in Australia on 14 February 1966. Working with Hal Missingham, Douglas Annand and Alistair Morrison as advisers, Gordon Andrews designed for the Reserve Bank of Australia its first $1, $2, $5, $10, $20 and $50 paper notes. These designs won almost universal appreciation.
   He was also one of Australia’s foremost industrial designers and a designer of international significance. He worked in Britain. France and Italy, as well as Australia and was the first Australian designer to be elected as a Fellow of the UK Society of Industrial Artists and Designers (1955). 
   </p>
 
-  <p class="columns2">
+  <p class="biographycolumns2">
     He was also awarded membership of the Faculty of Royal Designers for Industry and the Alliance Graphique Internationale. Prolific career across a broad range of disciplines and the extraordinary breadth of his interiors for the Australian Pavilion of the Comptoire Suisse trade fair (1960), the New South Wales Government Tourist Bureau, Sydney (1961) and the New Zealand Government Tourist Bureau (1965). The retrospective exhibition Gordon Andrews: a designer’s life, was held at the Powerhouse Museum in 1993, curated by Judith O’Callaghan. Andrews’ own monograph Gordon Andrews: A designer’s life, was published by the New South Wales University Press in the same year.
 Andrews retired to Lovett Bay on the Hawkesbury River until bushfires destroyed his home on his 80th birthday. He died in Sydney on 17 January, 2001, aged 87. He was survived by his former wife, Mary, children Lynn, Richard and Michael, and sister Betty Horsburgh.
   </p>
