--- a/catalogs.html
+++ b/catalogs.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <header class="logo-container">
-  <div class="logo">
-  </div>
+  <a href="homepageweb.html">
+    <div class="logo"></div>
+  </a>
 
   <h1>
     Gordon Andrews
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,800;1,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="homepageweb.css">
+    <link rel="stylesheet" href="biography.css">
   </h1>
 
   <ul>
@@ -49,25 +50,17 @@
 </header>
 
 <body>
-  <div class="conteudo">
-    <div class="carrousel">
-      <article class="card1">
-        <img src="https://raw.githubusercontent.com/UC-Design/11056-source-content/refs/heads/main/gordon-andrews/images/andrews-powerhouse-3.jpeg">
-      </article>
-      <article class="card2">
-        <img src="https://raw.githubusercontent.com/UC-Design/11056-source-content/refs/heads/main/gordon-andrews/images/andrews-cameron-offices-lift-AGI.jpg">
-      </article>
-      <article class="card3">
-        <img src="https://raw.githubusercontent.com/UC-Design/11056-source-content/refs/heads/main/gordon-andrews/images/andrews-powerhouse-16.jpeg">
-      </article>
-    </div>
-  </div>
-</body>
-
-<footer>
-  <h2 class="footer">
-    This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2025.
+  <h2>
+    Catalogs
+    <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
   </h2>
-</footer>
 
-</html>
+  <p class="catalogstext1">
+    These rare surviving catalogues and invitation were designed by Gordon Andrews who designed numerous David Jones gallery and other exhibition catalogues during the late 1940s.
+  </p>
+
+  <img src="orangecatalog.jpeg">
+  <img src="7designers.jpeg">
+  <img src="davidjones.jpeg">
+
+</body>
