80% done on key works

--- a/catalogs.html
+++ b/catalogs.html
@@ -8,7 +8,7 @@
   <h1>
     Gordon Andrews
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,800;1,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="biography.css">
+    <link rel="stylesheet" href="catalogs.css">
   </h1>
 
   <ul>
@@ -59,8 +59,66 @@
     These rare surviving catalogues and invitation were designed by Gordon Andrews who designed numerous David Jones gallery and other exhibition catalogues during the late 1940s.
   </p>
 
-  <img src="orangecatalog.jpeg">
-  <img src="7designers.jpeg">
-  <img src="davidjones.jpeg">
+  <div class="conteudo">
+    <div class="carrousel2">
+      <article class="card4">
+        <img src="orangecatalog.jpeg">
+      </article>
+      <article class="card5">
+        <img src="7designers.jpeg">
+      </article>
+      <article class="card6">
+        <img src="davidjones.jpeg">
+      </article>
+    </div>
+  </div>
+
+  <h2 class="quote2">
+    The '6 photographers' exhibition of 1955 brought together a group of 6 outstanding Australian photographers.
+  </h2>
+
+  <p class="catalogstext2">
+    '7 Designers' was an important early Australian design exhibition held in the David Jones gallery, Sydney from 30 September - 15 October, 1948 (1). It included displays of 'pottery, advertising and industrial design, furniture, costume, ornaments, paintings, fabrics and silverware' by James Linton, Frances Burke, Gordon Andrews, Steven Kalmar, Richards and Buchanan, Allan Lowe and Professor George Korody.
+  </p>
+  
+  <h2>
+    Bank Notes
+    <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+  </h2>
+
+  <img src="bill1.jpeg">
+
+  <div class="text-wrapper">
+  <p class="banknotetext1">
+    The transition to decimal currency was one of the most significant national projects of the 20th century in Australia. The move away from the British pound system required not only technical precision but also a new visual identity that reflected the nation's cultural heritage. The Reserve Bank of Australia tasked Andrews with designing the first decimal banknotes, a responsibility that carried enormous weight in terms of national representation and functionality.
+  </p>
+</div>
+
+  <img src="bill2.jpeg" class="bill-image2">
+
+  <p class="banknotetext2">
+    Andrews’ work on the decimal banknotes was crucial because it introduced a modern, distinctly Australian aesthetic to the country’s currency. Previous banknotes had largely followed British traditions, but Andrews saw an opportunity to create something uniquely Australian. His designs celebrated national identity by featuring prominent historical figures, Indigenous motifs, and representations of Australia’s natural environment. By doing so, he helped to redefine how Australians visually perceived their own currency.
+  </p>
+
+  <p class="banknotetext3">
+    Each of Andrews’ banknotes was meticulously designed to balance security features with aesthetic appeal. His use of intricate background patterns not only enhanced security against counterfeiting but also added visual depth to the designs. He employed vibrant colours to distinguish different denominations and incorporated fine typography and illustration techniques that reflected his deep understanding of graphic design. His attention to detail ensured that the banknotes remained both functional and visually compelling.
+  </p>
+
+  <h2>
+    Furniture
+    <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+  </h2>
+
+  <img src="chairback.jpeg" class="chairback">
+
+  <p class="furnituretext1">
+    Andrews was an active furniture designer, producing a range of modernist chairs, tables, and storage units. His furniture designs reflected his commitment to simplicity, function, and refined aesthetics. He often worked with locally sourced materials, incorporating timber and steel to create elegant yet practical pieces. Notably, his lounge chairs and modular storage units showcased his ability to merge craftsmanship with industrial production techniques, making high-quality design accessible to Australian households.
+  </p>
+
+  <img src="chairfront.jpeg" class="chairfront">
+
+  <p class="furnituretext2">
+    This graceful three legged 'Gazelle' chair, made of plywood, cast aluminium, steel and wool, is a slightly modified version of a chair Andrews designed during his time as design consultant to the Italian firm Olivetti. It featured in the company's showroom in London (1954) and in Sydney (1956). By 1957, the original four wooden legs were replaced by three in cast aluminium. Few examples survive.
+  </p>
 
 </body>
