Key Works finished

--- a/catalogs.html
+++ b/catalogs.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
 <header class="logo-container">
   <a href="homepageweb.html">
     <div class="logo"></div>
@@ -86,39 +89,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
   </h2>
 
-  <img src="bill1.jpeg">
+  <div class="banknote-section">
+    <img src="bill1.jpeg" class="bill-image1">
+    <img src="bill2.jpeg" class="bill-image2">
+    <div class="banknote-texts">
+      <p class="banknotetext1"> The transition to decimal currency was one of the most significant national projects of the 20th century in Australia. The move away from the British pound system required not only technical precision but also a new visual identity that reflected the nation's cultural heritage. The Reserve Bank of Australia tasked Andrews with designing the first decimal banknotes, a responsibility that carried enormous weight in terms of national representation and functionality.</p>
+      <p class="banknotetext2"> Andrews’ work on the decimal banknotes was crucial because it introduced a modern, distinctly Australian aesthetic to the country’s currency. Previous banknotes had largely followed British traditions, but Andrews saw an opportunity to create something uniquely Australian. His designs celebrated national identity by featuring prominent historical figures, Indigenous motifs, and representations of Australia’s natural environment. By doing so, he helped to redefine how Australians visually perceived their own currency.</p>
+      <p class="banknotetext3"> Each of Andrews’ banknotes was meticulously designed to balance security features with aesthetic appeal. His use of intricate background patterns not only enhanced security against counterfeiting but also added visual depth to the designs. He employed vibrant colours to distinguish different denominations and incorporated fine typography and illustration techniques that reflected his deep understanding of graphic design. His attention to detail ensured that the banknotes remained both functional and visually compelling.</p>
+    </div>
+  </div>
 
-  <div class="text-wrapper">
-  <p class="banknotetext1">
-    The transition to decimal currency was one of the most significant national projects of the 20th century in Australia. The move away from the British pound system required not only technical precision but also a new visual identity that reflected the nation's cultural heritage. The Reserve Bank of Australia tasked Andrews with designing the first decimal banknotes, a responsibility that carried enormous weight in terms of national representation and functionality.
-  </p>
-</div>
-
-  <img src="bill2.jpeg" class="bill-image2">
-
-  <p class="banknotetext2">
-    Andrews’ work on the decimal banknotes was crucial because it introduced a modern, distinctly Australian aesthetic to the country’s currency. Previous banknotes had largely followed British traditions, but Andrews saw an opportunity to create something uniquely Australian. His designs celebrated national identity by featuring prominent historical figures, Indigenous motifs, and representations of Australia’s natural environment. By doing so, he helped to redefine how Australians visually perceived their own currency.
-  </p>
-
-  <p class="banknotetext3">
-    Each of Andrews’ banknotes was meticulously designed to balance security features with aesthetic appeal. His use of intricate background patterns not only enhanced security against counterfeiting but also added visual depth to the designs. He employed vibrant colours to distinguish different denominations and incorporated fine typography and illustration techniques that reflected his deep understanding of graphic design. His attention to detail ensured that the banknotes remained both functional and visually compelling.
-  </p>
-
-  <h2>
-    Furniture
-    <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
-  </h2>
-
-  <img src="chairback.jpeg" class="chairback">
-
-  <p class="furnituretext1">
-    Andrews was an active furniture designer, producing a range of modernist chairs, tables, and storage units. His furniture designs reflected his commitment to simplicity, function, and refined aesthetics. He often worked with locally sourced materials, incorporating timber and steel to create elegant yet practical pieces. Notably, his lounge chairs and modular storage units showcased his ability to merge craftsmanship with industrial production techniques, making high-quality design accessible to Australian households.
-  </p>
-
-  <img src="chairfront.jpeg" class="chairfront">
-
-  <p class="furnituretext2">
-    This graceful three legged 'Gazelle' chair, made of plywood, cast aluminium, steel and wool, is a slightly modified version of a chair Andrews designed during his time as design consultant to the Italian firm Olivetti. It featured in the company's showroom in London (1954) and in Sydney (1956). By 1957, the original four wooden legs were replaced by three in cast aluminium. Few examples survive.
-  </p>
-
+  <selection id="furniture">
+    <div class="furniture-selection">
+      <img src="chairfront.jpeg" alt="Front view of chair" class="furniture-image">
+      <img src="chairback.jpeg" alt="Back view of chair" class="furniture-image">
+      <div class="furniture-texts">
+      <p> Andrews was an active furniture designer, producing a range of modernist chairs, tables, and storage units. His furniture designs reflected his commitment to simplicity, function, and refined aesthetics. He often worked with locally sourced materials, incorporating timber and steel to create elegant yet practical pieces. Notably, his lounge chairs and modular storage units showcased his ability to merge craftsmanship with industrial production techniques, making high-quality design accessible to Australian households.</p>
+      <p> This graceful three legged 'Gazelle' chair, made of plywood, cast aluminium, steel and wool, is a slightly modified version of a chair Andrews designed during his time as design consultant to the Italian firm Olivetti. It featured in the company's showroom in London (1954) and in Sydney (1956). By 1957, the original four wooden legs were replaced by three in cast aluminium. Few examples survive.</p>
+      </div>
+    </div>
+    </selection>
 </body>
+
+<footer>
+  <h2 class="footer">
+    This website was produced by students in the Faculty of Arts & Design, University of Canberra, 2025.
+  </h2>
+</footer>
