3 out of 4 pages left to go

--- a/biography.html
+++ b/biography.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
 <header class="logo-container">
   <a href="homepageweb.html">
     <div class="logo"></div>
@@ -19,8 +22,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
       <ul class="dropdown">
         <li><a href="biography.html">Biography</a></li>
-        <li><a href="#">Influence</a></li>
-        <li><a href="#">Legacy</a></li>
+        <li><a href="biography.html">Influence</a></li>
+        <li><a href="biography.html">Legacy</a></li>
       </ul>
     </li>
 
@@ -30,9 +33,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
-        <li><a href="#">Catalogs</a></li>
-        <li><a href="#">Bank Notes</a></li>
-        <li><a href="#">Furniture</a></li>
+        <li><a href="catalogs.html">Catalogs</a></li>
+        <li><a href="catalogs.html">Bank Notes</a></li>
+        <li><a href="catalogs.html">Furniture</a></li>
       </ul>
     </li>
 
@@ -42,8 +45,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
-        <li><a href="#">Playhouse</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Powerhouse</a></li>
       </ul>
     </li>
   </ul>
@@ -55,29 +57,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
   </h2>
 
-  <img src="GordonAndrews.jpg">
-
-  <p class="biographytext1">
-  Gordon Andrews. (b.1914) Born in Ashfield, NSW, this designer’s career has embraced industrial design (cookware, furniture), graphic design, development of exhibition concepts and design as well as photography. He trained at the Sydney Technical College, Ultimo and the East Sydney Technical College but gained his formative experience in graphic design with the advertising agencies Samson Clark Price Berry, Sydney and Stuart, London in the 1930s. He returned to Sydney in 1939 and briefly ran a personal design practice. During the 1939-45 war, he worked in the De Havilland drawing office and later supervised an experimental hangar.
-  </p>
-  <p class="biographytext2">
-    In 1946, he held a one-man show of paintings and ‘constructions’, including contemporary furniture, with some models later copied by others. In 1949, he took his family to London and set up his own design office, which was retained by the Design Research Unit to design exhibitions for Ilford, Peter Robinsons, The Tea Board, the British Council. He also worked on exhibitions and showrooms for Olivetti, and Smiths Instruments. In 1951, he was made Fellow of the Society of Industrial Designers.
-  </p>
+  <div class="biography-section">
+    <div class="gordonandrews-image">
+      <img src="GordonAndrews.jpg" alt="Gordon Andrews Image">
+    </div>
+    <div class="biography-texts">
+      <p class="biography1"> Gordon Andrews. (b.1914) Born in Ashfield, NSW, this designer’s career has embraced industrial design (cookware, furniture), graphic design, development of exhibition concepts and design as well as photography. He trained at the Sydney Technical College, Ultimo and the East Sydney Technical College but gained his formative experience in graphic design with the advertising agencies Samson Clark Price Berry, Sydney and Stuart, London in the 1930s. He returned to Sydney in 1939 and briefly ran a personal design practice. During the 1939-45 war, he worked in the De Havilland drawing office and later supervised an experimental hangar.</p>
+      <p class="biography2"> In 1946, he held a one-man show of paintings and ‘constructions’, including contemporary furniture, with some models later copied by others. In 1949, he took his family to London and set up his own design office, which was retained by the Design Research Unit to design exhibitions for Ilford, Peter Robinsons, The Tea Board, the British Council. He also worked on exhibitions and showrooms for Olivetti, and Smiths Instruments. In 1951, he was made Fellow of the Society of Industrial Designers.</p>
+    </div>
+  </div>
 
   <h2 class="quote">
     "Gordon Andrews design career has been remarkably diverse, making difficult an overall assessment of his work. He is considered by his peers and critics to have worked successfully in virtually every medium he has chosen"
   </h2>
-
-  <p class="biographycolumns1">
-    During 1953-1954, he and his family lived in Turin, Italy, while he designed an encyclopaedia, styled a fountain pen and produced an exhibition for the 1954 Fiera de Milano. Then he turned down a three-year contract with Olivetti to bring his family back to Sydney. On return, he designed exhibitions, shops, showrooms and furniture for Olivetti, David Jones the Commonwealth Bank, NSW Government agencies, and other notable clients.
-  He is best known for designing the first decimal currency bank notes that were released in Australia on 14 February 1966. Working with Hal Missingham, Douglas Annand and Alistair Morrison as advisers, Gordon Andrews designed for the Reserve Bank of Australia its first $1, $2, $5, $10, $20 and $50 paper notes. These designs won almost universal appreciation.
-  He was also one of Australia’s foremost industrial designers and a designer of international significance. He worked in Britain. France and Italy, as well as Australia and was the first Australian designer to be elected as a Fellow of the UK Society of Industrial Artists and Designers (1955). 
-  </p>
-
-  <p class="biographycolumns2">
-    He was also awarded membership of the Faculty of Royal Designers for Industry and the Alliance Graphique Internationale. Prolific career across a broad range of disciplines and the extraordinary breadth of his interiors for the Australian Pavilion of the Comptoire Suisse trade fair (1960), the New South Wales Government Tourist Bureau, Sydney (1961) and the New Zealand Government Tourist Bureau (1965). The retrospective exhibition Gordon Andrews: a designer’s life, was held at the Powerhouse Museum in 1993, curated by Judith O’Callaghan. Andrews’ own monograph Gordon Andrews: A designer’s life, was published by the New South Wales University Press in the same year.
-Andrews retired to Lovett Bay on the Hawkesbury River until bushfires destroyed his home on his 80th birthday. He died in Sydney on 17 January, 2001, aged 87. He was survived by his former wife, Mary, children Lynn, Richard and Michael, and sister Betty Horsburgh.
-  </p>
 
   <h2>
     Influence
@@ -86,6 +78,10 @@ Andrews retired to Lovett Bay on the Hawkesbury River until bushfires destroyed 
   <p class="influencetext1">
     Andrews was part of a dynamic generation of Australian designers who sought to modernise the country's design identity. His contemporaries included Grant Featherston, known for his innovative furniture designs, and Douglas Annand, a celebrated graphic designer. Together, these designers helped to shape the visual language of mid-century Australia, bringing international influences into a uniquely Australian context.
   </p>
+
+  <div class="memorial-image">
+  <img src="memorial.jpeg" alt="memorial">
+  </div>
 
   <p class="influencetext2">
     His work also intersected with the broader architectural and design movements of his time. He collaborated with architects and urban planners, contributing to projects that reflected the increasing modernisation of Australian cities. Andrews was deeply involved in discussions about national identity in design, advocating for an approach that balanced global trends with distinctly Australian elements.
