--- a/catalogs.html
+++ b/catalogs.html
@@ -40,13 +40,12 @@
     </li>
 
     <li>
-      <a href="#">Copyright ▼</a>
+      <a href="#">Powerhouse ▼</a>
       <ul class="dropdown">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
-        <li><a href="#">Playhouse</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Powerhouse</a></li>
       </ul>
     </li>
   </ul>
@@ -90,8 +89,10 @@
   </h2>
 
   <div class="banknote-section">
-    <img src="bill1.jpeg" class="bill-image1">
-    <img src="bill2.jpeg" class="bill-image2">
+    <div class="banknote-image">
+      <img src="bill1.jpeg" alt="Banknote1 Image">
+      <img src="bill2.jpeg" alt="Banknote2 Image">
+    </div>
     <div class="banknote-texts">
       <p class="banknotetext1"> The transition to decimal currency was one of the most significant national projects of the 20th century in Australia. The move away from the British pound system required not only technical precision but also a new visual identity that reflected the nation's cultural heritage. The Reserve Bank of Australia tasked Andrews with designing the first decimal banknotes, a responsibility that carried enormous weight in terms of national representation and functionality.</p>
       <p class="banknotetext2"> Andrews’ work on the decimal banknotes was crucial because it introduced a modern, distinctly Australian aesthetic to the country’s currency. Previous banknotes had largely followed British traditions, but Andrews saw an opportunity to create something uniquely Australian. His designs celebrated national identity by featuring prominent historical figures, Indigenous motifs, and representations of Australia’s natural environment. By doing so, he helped to redefine how Australians visually perceived their own currency.</p>
