--- a/homepageweb.html
+++ b/homepageweb.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
 <header class="logo-container">
   <div class="logo">
   </div>
@@ -18,8 +21,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
       <ul class="dropdown">
         <li><a href="biography.html">Biography</a></li>
-        <li><a href="#">Influence</a></li>
-        <li><a href="#">Legacy</a></li>
+        <li><a href="biography.html">Influence</a></li>
+        <li><a href="biography.html">Legacy</a></li>
       </ul>
     </li>
 
@@ -30,19 +33,18 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
         <li><a href="catalogs.html">Catalogs</a></li>
-        <li><a href="#">Bank Notes</a></li>
-        <li><a href="#">Furniture</a></li>
+        <li><a href="catalogs.html">Bank Notes</a></li>
+        <li><a href="catalogs.html">Furniture</a></li>
       </ul>
     </li>
 
     <li>
-      <a href="#">Copyright ▼</a>
+      <a href="#">Powerhouse ▼</a>
       <ul class="dropdown">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
-        <li><a href="#">Playhouse</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Powerhoouse</a></li>
       </ul>
     </li>
   </ul>
@@ -50,15 +52,15 @@
 
 <body>
   <div class="conteudo">
-    <div class="carrousel">
+    <div class="carrousel1">
       <article class="card1">
-        <img src="https://raw.githubusercontent.com/UC-Design/11056-source-content/refs/heads/main/gordon-andrews/images/andrews-powerhouse-3.jpeg">
+        <img src="designerslife.jpeg">
       </article>
       <article class="card2">
-        <img src="https://raw.githubusercontent.com/UC-Design/11056-source-content/refs/heads/main/gordon-andrews/images/andrews-cameron-offices-lift-AGI.jpg">
+        <img src="elevator.jpg">
       </article>
       <article class="card3">
-        <img src="https://raw.githubusercontent.com/UC-Design/11056-source-content/refs/heads/main/gordon-andrews/images/andrews-powerhouse-16.jpeg">
+        <img src="national.jpeg">
       </article>
     </div>
   </div>
