--- a/biography.html
+++ b/biography.html
@@ -45,7 +45,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
-        <li><a href="#">Powerhouse</a></li>
+        <li><a href="powerhouse.html">Powerhouse</a></li>
       </ul>
     </li>
   </ul>
