--- a/biography.html
+++ b/biography.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 <header class="logo-container">
-  <a href="homepageweb.html">
+  <a href="index.html">
     <div class="logo"></div>
   </a>
 
