--- a/catalogs.html
+++ b/catalogs.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 <header class="logo-container">
-  <a href="homepageweb.html">
+  <a href="index.html">
     <div class="logo"></div>
   </a>
 
@@ -22,8 +22,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
       <ul class="dropdown">
         <li><a href="biography.html">Biography</a></li>
-        <li><a href="#">Influence</a></li>
-        <li><a href="#">Legacy</a></li>
+        <li><a href="biography.html">Influence</a></li>
+        <li><a href="biography.html">Legacy</a></li>
       </ul>
     </li>
 
@@ -34,8 +34,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
         <li><a href="catalogs.html">Catalogs</a></li>
-        <li><a href="#">Bank Notes</a></li>
-        <li><a href="#">Furniture</a></li>
+        <li><a href="catalogs.html">Bank Notes</a></li>
+        <li><a href="catalogs.html">Furniture</a></li>
       </ul>
     </li>
 
@@ -45,7 +45,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
-        <li><a href="#">Powerhouse</a></li>
+        <li><a href="powerhouse.html">Powerhouse</a></li>
       </ul>
     </li>
   </ul>
